<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Shield</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="about">About</string>
    <string name="action_broadcast">Broadcast</string>
    <string name="action_sign_up">Register</string>
    <string name="add_to_contacts">Update Contact</string>
    <string name="channel_description">Shield Notifications</string>
    <string name="channel_name">Shield</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="done">Done</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="exposed">You may have been exposed</string>
    <string name="exposed_text">You may have been exposed to a COVID-19 patient</string>
    <string name="exposed_text2">during </string>
    <string name="you_were_exposed">You were exposed</string>
    <string name="foreground_notification_action_stop">Stop</string>
    <string name="foreground_notification_content_title">Shield is now running in the background</string>
    <string name="invite">Invite Friends</string>
    <string name="is_nearby">Nearby</string>
    <string name="distance_text">Warning</string>
    <string name="distance_text2">Please maintain your distance.</string>
    <string name="message_date_yesterday">Yesterday</string>
    <string name="notification_sound">Notification Sound</string>
    <string name="onboarding_title_1">Welcome to Shield!</string>
    <string name="onboarding_description_1">Help stop the spread by turning Bluetooth on. When outside the home, stay at least six feet away from other people, and avoid groups</string>
    <string name="onboarding_title_2">How does it work?</string>
    <string name="onboarding_description_2">Shield uses Bluetooth signals to determine when your phone is near another phone that also has the app installed.</string>
    <string name="phone_hint">Phone Number</string>
    <string name="powered_by">Powered by Nova</string>
    <string name="save">Save</string>
    <string name="selected_avatar_description">Current selected user avatar</string>
    <string name="settings">Settings</string>
    <string name="settings_category_account">ACCOUNT</string>
    <string name="settings_category_help">HELP</string>
    <string name="settings_category_notifications">ALERTS</string>
    <string name="settings_category_user_name">Username</string>
    <string name="settings_feedback_summary">Report technical issues or suggest new features</string>
    <string name="settings_feedback_title">Send Feedback</string>
    <string name="settings_alerts_notifications_title">Enable Alert Notifications</string>
    <string name="sign_up_text">Welcome to Shield!</string>
    <string name="terms">By registering your account, you accept our Terms and Conditions.</string>
    <string name="user_entry">Type Here...</string>
    <string name="username_text">Please select a nickname.</string>
    <string name="verify">Continue</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="verify_hint">Firebase Hint Here</string>
    <string name="verify_title">Firebase Verification</string>
    <string name="from">from</string>
    <string name="spaced_shield">N O V A</string>
    <string name="phone_error">verification error</string>
    <string name="cancel">Cancel</string>
    <string name="verify_skip">Skip</string>
    <string name="Permissions_continue">Continue</string>
    <string name="Permissions_not_now">Not Now</string>
    <string name="build_number">Version 1.0.0-alpha</string>
    <string name="url_tos">https://www.novalabs.lk/tos</string>
    <string name="url_privacy">https://www.novalabs.lk/privacy-policy</string>
    <string name="connectivity_dialog_text">Shield requires an active internet connection in the first time it is used.</string>
    <string name="remove_from_contacts">Remove from Contacts</string>
    <string name="user_avatar_description">User Avater</string>
    <string name="chat_message_failed">Retry</string>
    <string name="choose_avatar_image_description">Avatar option</string>
    <string name="placeholder_date">12:20</string>
    <string name="placeholder_broadcast_chat">Broadcast Chat</string>
    <string name="messages_paginator">LOAD OLDER MESSAGES</string>
    <string name="placeholder_filename">IMG_012391049104.jpg</string>
    <string name="clearlogs">Clear Logs</string>
    <string name="settings_category_other">OTHER</string>
    <string name="settings_category_stats">STATISTICS</string>
    <string name="settings_stats_logs_title">Logging</string>
    <string name="settings_stats_logs_summary">Allow shield collect usage statistics</string>
    <string name="shield_loader_text_retry">Start Shielding</string>
    <string name="stop_shield_loader_text_retry">Stop Shielding</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_tabbed_main">TabbedMainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_friends">Friends</string>
    <string name="title_alerts">Alerts</string>
    <string name="title_activity_bottom_navigation_main">MainActivity</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="action_start_shield">Shielding State</string>
    <string name="action_stop_shield">Start Shielding</string>
    <string name="add_friend_text">Add Friends</string>
    <string name="add_friends_description_1">Mute alerts by whitelisting  friends who you trust.</string>
    <string name="whitelist_description">You have no whitelisted friends.</string>
    <string name="text_notification_0">Warning!</string>
    <string name="text_notification_1">Based on your contact history, you might have been exposed to a  COVID-19 patient.</string>
    <string name="text_notification_2">Please self-quarantine.</string>
    <string name="dismiss_text">Dismiss</string>
    <string name="placeholder_qr_code">QR Code</string>
    <string name="placeholder_qr_code_prompt">Your QR code is private. If you share it with someone they can scan it with their Shield camera to add you as a close friend.</string>
    <string name="action_share_barcode">Share</string>
    <string name="action_clear_logs">Clear Logs</string>
    <string name="settings_delete_account">Delete My Account</string>
    <string name="settings_mark_infected">Mark as COVID-19 Infected</string>
    <string name="confirm_infected_dialog_text">I confirm that I have been officially diagnosed with COVID-19.</string>
    <string name="action_clear_database">Clear DB Records </string>
    <string name="sure">I\'m Sure</string>
    <string name="permission_location_rationale">Without location permission, Shield is unable to capture information of people around you. Are you sure you want to deny this permission?</string>
    <string name="permission_location_ask">Shield requires access to location information. Would you like to open app settings to enable this?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="action_about">About</string>
    <string name="connectivity_dialog_text_settings">Shield requires an active internet connection for this functionality.</string>

</resources>