<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="account_category"
        app:title="@string/settings_category_account">
        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="username"
            app:title="@string/settings_category_user_name"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="deleteAccount"
            app:title="@string/settings_delete_account"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_category_notifications">
        <SwitchPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="settings_notifications_enabled"
            app:switchTextOff="true"
            app:title="@string/settings_alerts_notifications_title" />

        <Preference
            app:title="@string/notification_settings"
            app:key="notificationSettings"
            app:iconSpaceReserved="false"/>

        <Preference
            app:title="@string/notification_sound"
            app:key="notificationSound"
            app:iconSpaceReserved="false"/>


    </PreferenceCategory>


    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_category_stats">
        <SwitchPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="settings_logs_enabled"
            app:switchTextOff="true"
            app:summary="@string/settings_stats_logs_summary"
            app:title="@string/settings_stats_logs_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="help_category"
        app:title="@string/settings_category_help">
        <Preference
            app:iconSpaceReserved="false"
            app:key="feedback"
            app:summary="@string/settings_feedback_summary"
            app:title="@string/settings_feedback_title" />
    </PreferenceCategory>
</PreferenceScreen>