<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nova.android.shield.ui.home.MainActivity">

    <item
        android:iconTint="@color/colorAccent"
        android:id="@+id/action_shield"
        android:orderInCategory="100"
        android:title="@string/action_start_shield"
        android:icon="@drawable/ic_baseline_play_circle_filled_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_logs"
        android:orderInCategory="100"
        android:title="@string/action_clear_logs"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_database"
        android:orderInCategory="100"
        android:title="@string/action_clear_database"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>