<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_friends"
        android:name="com.nova.android.shield.ui.home.tabs.friends.FriendsFragment"
        android:label="@string/title_friends"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nova.android.shield.ui.home.tabs.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_alerts"
        android:name="com.nova.android.shield.ui.home.tabs.alerts.AlertsFragment"
        android:label="@string/title_alerts"
        tools:layout="@layout/fragment_alerts" />
</navigation>