<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/Theme.Shield.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/Theme.Shield.PopupOverlay"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/about_layout"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:forceDarkAllowed="false"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/onboarding_2" />
        <TextView
            android:text="@string/app_name"
            android:textSize="18sp"
            android:layout_weight="0"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            style="@style/centerTextStyle"/>

        <TextView
            android:text="@string/powered_by"
            android:textSize="14sp"
            android:layout_weight="0"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            style="@style/centerTextStyle"/>

        <TextView
            android:id="@+id/versionName"
            android:textSize="12sp"
            android:text="@string/build_number"
            android:layout_weight="0"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:paddingBottom="@dimen/appbar_padding"
            style="@style/centerTextStyle"/>


    </LinearLayout>


</LinearLayout>